--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/RoleHelper.php"
+            "app/Helpers/RoleHelper.php",
+            "app/Helpers/NavigationHelper.php"
         ]
     },
     "autoload-dev": {
